# demo

./: .gitignore  README.md
baseline/: .gitignore  CONDA_SETUP.md  EXPERIMENTS.md  README.md  evaluator.py  pack_code.sh  pyproject.toml  requirements.txt  run_dialog.py  test_qwen_api.py  utils.py
baseline/back_up/: dialog_prompter.py
baseline/prompting/: dialog_prompter.py  display_utils.py  parser.py  plan_prompter.py
baseline/rocobench/envs/: env_utils.py  task_pack.py
code/: README.md  action_filter.py  candidate_voter.py  config.py  dialog_handler_template.py  evaluation_logger.py  experience_memory.py  format_healer.py  integrated_handler.py  loop_detector.py  ollama_client.py  prompt_templates.py  reflection_engine.py  role_assigner.py  task_decomposer.py  test_ollama.py
code_v1.0/: evaluator.py  run_dialog.py
code_v1.0/prompting/: dialog_prompter.py  plan_prompter.py
code_v1.0/rocobench/: rrt_multi_arm.py
code_v1.0/rocobench/envs/: env_utils.py  task_cabinet.xml  task_pack.xml  task_sort.py
docs/: 00-题目深度分析与行动方案.md  01-创新点深度分析.md  02-70B模型部署指南.md  03-Ollama环境搭建完全指南.md  04-Prompt工程专题.md  05-学习资源汇总.md  06-开源方案调研与10轮方案迭代.md  07-项目报告-小组.md  08-项目报告-个人.md  09-创新难点与优化方案.md  10-经典问题架构初学者指南.md  11-从零到精通完全指南.md
