[project]
name = "rocobench-eval-tools"
version = "0.1.0"
description = "Batch evaluation and code packing tools for RocoBench."
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "anthropic==0.2.9",
    "dm-control==1.0.8",
    "matplotlib==3.5.1",
    "mujoco==2.3.0",
    "natsort==8.0.2",
    "numpy==1.22.0",
    "open3d==0.19.0",
    "openai==1.63.2",
    "opencv-python==4.5.5.64",
    "pillow==10.4.0",
    "pydantic==1.10.4",
    "pyquaternion==0.9.9",
    "requests==2.32.4",
    "scipy==1.8.0",
    "seaborn==0.11.2",
    "setuptools<81",
    "tokenizers<0.21",
    "tqdm==4.67.1",
    "transforms3d==0.4.1",
    "wandb==0.15.2",
]

[tool.uv]
package = false
